src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Coursera For Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Launch_Date__c</fullName>
        <label>Actual Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asana_Link__c</fullName>
        <label>Asana Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Slug__c</fullName>
        <label>Client Slug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Salesforce_ID__c</fullName>
        <formula>Opportunity__r.Salesforce_Opty_Id_18_Digit__c</formula>
        <label>Opportunity Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs_Specification_Template__c</fullName>
        <defaultValue>&quot;https://docs.google.com/spreadsheets/d/1pW5zAKMoN1n4EL3GGEVqU5DMOGaiulG1u4gJaAIyGnU/edit#gid=2139265451&quot;</defaultValue>
        <inlineHelpText>Template to generate the Programs Specification Form for a case.</inlineHelpText>
        <label>Programs Specification Template</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Provisioning</fullName>
        <active>true</active>
        <businessProcess>Coursera For Business</businessProcess>
        <label>Provisioning</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>